--- a/package.json
+++ b/package.json
@@ -1,9 +1,10 @@
 {
-  "name": "ReactReduxQuizApp",
+  "name": "reactreduxquizapp",
   "version": "1.0.0",
   "description": "",
   "main": "index.js",
   "scripts": {
+    "start": "node server webpack --progress",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "keywords": [],
@@ -12,7 +13,9 @@
   "devDependencies": {
     "redux-logger": "^3.0.6",
     "redux-thunk": "^2.2.0",
-    "webpack": "^3.10.0"
+    "webpack": "^3.10.0",
+    "webpack-dev-middleware": "^1.12.2",
+    "webpack-hot-middleware": "^2.21.0"
   },
   "dependencies": {
     "axios": "^0.17.1",
